version 1.8.5, in progress
- Fix: avoid duplicating the return line when saving
  packaged functions that were originally old-style
  
8/28/09 version 1.8.4
- Fix breakage in GUI interface for calling user-defined
  functions, plus fixes for GUI function package editor
- Patches from Mandriva: build OK with -Wformat-security,
  and respect LDFLAGS as supplied by user
- Add "to" to the list of reserved words
- Enable testing of nonlinear restrictions on simultaneous
  equation systems
- Update docs and examples for the "new style" definition
  of functions
- Small modification to GUI series editor
- Try to make path-searching a little smarter for files
  referenced in scripts
- GUI language switcher: add a workaround for platforms
  missing proper locale aliases
- Stata dta importer: try to work around missing character
  encoding information
- ODS import: fix bug 2841292
- win32: update GTK+ stack to 2.16.5

8/10/09 version 1.8.3
- Fix bugs 2819633, 2827358, 2828349, 2833434
- $stopwatch: use times() function if available, to include
  execution time of child processes
- Add function "mreverse" to reverse rows of a matrix
- Add function "deseas" to deseasonalize a monthly or
  quarterly time series using X-12-ARIMA or TRAMO/SEATS
- Remove function "strcmp" as redundant
- Add "sscanf" function
- Add function "pergm" corresponding to the pergm command
- Several fixes and enhancements for interaction with
  TRAMO/SEATS and X-12-ARIMA
- Many small GUI fixes
- Add (optional) support for Ox programs via the "foreign"
  command
- Ctrl-X in editing windows: cut text, don't exit
- Data importers: add a comment to the imported dataset
  saying where it came from
- 3-D graphs: use the wxt terminal in gnuplot if it's
  available
- Fix for putting RTF onto clipboard on OS X
- Observation labels ("case markers"): print up to 15
  characters of such labels
- Support compaction of hourly (24 hours per day) data
  to daily
- Add "set" variable "csv_na" to control the representation