@@ -282,7 +282,11 @@ gretl.
 <a href="http://sourceforge.net/tracker/?group_id=36234&amp;atid=416803">bug reports</a>
 and
 <a href="http://sourceforge.net/tracker/?group_id=36234&amp;atid=416806">feature requests</a>
-using the SourceForge Tracker system.</p>
+using the SourceForge Tracker system.  But please note: we request that you use the bug tracker 
+only if you're fairly sure you've really found a bug; if you're uncertain, please send a 
+message to one of the gretl mailing lists first.  (Needless to say, if gretl crashes you've
+really found a bug alright!)
+</p>
 
 <h2><a name="contrib">Contributing to gretl</a></h2>
 
