@@ -1,6 +1,7 @@
 version 1.8.5, in progress
 - Fix: avoid duplicating the return line when saving
   packaged functions that were originally old-style
+- More refinements for function-package editor
   
 8/28/09 version 1.8.4
 - Fix breakage in GUI interface for calling user-defined
